# haloha-grpc-showcase

./: .editorconfig  Cargo.toml  flake.nix
authentication/: Cargo.toml  build.rs
authentication/src/: main.rs  proto.rs
frontend/: build-proto.sh  package.json
frontend/src/app/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/lib/: authentication.ts
proto/: empty.proto
proto/users/: authentication.proto
