[package]
name = "authentication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] } # enables use of async and await
tonic = "0.11.0" # grpc client/server
tonic-types = "0.11.0"
prost = "0.12.3"
anyhow = "1.0"

[build-dependencies]
tonic-build = { version = "0.11.0", default-features = false, features = ["prost"] }
